--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
     <script>
 
+    var ulElement = document.querySelector('ul');
+    var inputElement = document.querySelector('input');
+    var buttonElement = document.querySelector('button');
+
+    function buttonClick () {
+        console.log ('Button clicked.')
+    }
+
+    buttonElement.addEventListener('click', buttonClicked);
     </script>
   </body>
 </html>
