store input value and empty

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     var buttonElement = document.querySelector('button');
 
     function buttonClick () {
+        var currentValue = inputElement.value;
+        inputElement.value = '';
         console.log ('Button clicked.')
     }
 
