--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             buttonDelete.addEventListener('click', function(e) {
                 e.target.parentNode.remove();
             });
+
+            inputElement.focus();
             
         }
 
